force-app/main/default/objects/Job_Line_Item__c/Job_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Job Line Item(DEPRECATED)</label>
    <nameField>
        <displayFormat>JLI-{00000}</displayFormat>
        <label>Job Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>