force-app/main/default/objects/Job_Line_Item__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <label>Part Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>