force-app/main/default/objects/Job_Line_Item__c/fields/Related_to_Job__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Job__c</fullName>
    <inlineHelpText>Specifies the Job to which the record is associated to.</inlineHelpText>
    <label>Related to Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipName>Job_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>